# arbitrage-bot-rust

./: Cargo.toml  readme.md  trades.txt
src/: aevo.rs  arbitrage.rs  dydx.rs  main.rs  socket_stream.rs
