[package]
name = "arbitrage"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.83"
async-stream = "0.3.5"
chrono = "0.4.38"
env_logger = "0.11.3"
futures-core = "0.3.30"
futures-util = "0.3.30"
log = "0.4.21"
serde_json = "1.0.117"
tokio = { version = "1.37.0", features = ["rt-multi-thread", "time", "macros"] }
tokio-tungstenite = { version = "0.21.0", features = ["native-tls"] }
